Added passing DOI and eprint lists into am.add_bibtex().
Also, am.update() now returns the updated list of entries.

*****

Swapped order of author and first-author auto-suggestion.
Show first-author option first.

*****

Implemented cleanup command-line argument to clean a bibfile
independently of the bibmanager database.
Fixed minor bug in ads-search CLI docs.

*****

Added cleanup docs.

*****

Added bash-bibm FAQ into docs.

*****

Updated link of zenodo badge to always-latest version.

*****

Updated README.md with RTD docs badge.

*****

Added docs badge to setup/PyPI (long description) and index.rst.
Fixed docs path in README.md.

*****

Bumped bibmanager version to 1.1.2.

*****

Updated MANIFEST.in to include tests, docs, and requirements.txt

*****

Bumped bibmanager version to 1.1.3.


***** Sun Jun 16 22:55:12 CEST 2019  *****

Updated docs, added tutorial and tweaked get-started text.


*****  Wed Jun 26 14:37:36 PDT 2019  *****

Fixed link in pypi long description.

*****

Updated docs, added api.

*****

Minor tweak in conf.py.

*****

Bumped bibmanager version to 1.1.4.

*****  Fr 12. Jul 14:59:28 CEST 2019  *****

Try to fix viewcode docs extension to show source code of api.

*****

More tweaks to docs/conf.py.

*****  Sat Jul 27 12:07:14 CEST 2019  *****

Updated url in help display.

*****

Minor tweaks/clean-up in the docs.

*****

Updated contributing.rst docs.

*****

Bumped bibmanager version to 1.1.5.


*****  Tue Aug 20 22:00:46 CEST 2019  *****

Grabbed PR #45 that removes cmdclass post-install functions
(which seemed to be causing troubles).
Replaced with a check that HOME folder exists.

Added bibmanager.__version__ as second element of pickled file
in bib_manager.save().

Added check between pickled file and bibm versions before CLI runs.
Update database when v_pickle < v_bibm.
Stop and recommend to update if v_bibm < v_pickle.

Implemented bib_manager.get_version() that gets the pickled file
version.
Tested and documented.